--- a/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
@@ -76,7 +76,7 @@
                                                     </div>         
                                                 </div>         
                                             </div>
-                                            <div class="single_slider" style="background-image: url(assets/img/slider/slider_3.png)">
+                                            <div class="single_slider" style="background-image: url(assets/img/slider/sl1.png)">
                                                 <div class="slider_content">  
                                                     <div class="slider_content_inner">  
                                                         <h1>Best Collection</h1>
