--- a/Normal_DATN/src/main/resources/templates/nguoiDung/cart.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/cart.html
@@ -76,7 +76,7 @@
                                             </table>   
                                                 </div>  
                                                    <div class="cart_submit">                                              
-                                                    <button  ><a  th:href="@{/clearCart}" onclick="alert('Đã clear')">Dọn dẹp giỏ hàng</a></button>   
+                                                    <button  ><a  th:href="@{/clearCart}" >>Xóa hết giỏ hàng</a></button>   
                                                                                         
                                                   
                                                 </div>   
@@ -110,7 +110,7 @@
                                                        </div>
                                                        <div class="cart_subtotal ">
                                                            <p>Phí vận chuyển</p>
-                                                           <p class="cart_amount"><span>Flat Rate:</span>₫ 30.000</p>
+                                                           <p class="cart_amount">₫ 30.000</p>
                                                        </div>
                                      
 
