--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -110,7 +110,7 @@
                                        <!--logo start-->
                                         <div class="col-lg-3 col-md-3">
                                             <div class="logo">
-                                                <!--<a th:href="@{/index}"><img th:src="" alt=""></a> -->
+                                                <a th:href="@{/index}"><img th:src="@{/assets/img/logo/logoHoLy.png}" alt=""></a> 
                                             </div>
                                         </div>
                                         <!--logo end-->
