--- a/Normal_DATN/src/main/resources/templates/nguoiDung/singleProduct.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/singleProduct.html
@@ -66,11 +66,11 @@
                                                     <input name="qty" min="1" th:max="${product.quantity}" value="1" type="number">
                                                       
                                                       
-                                                               <div th:if="${product.quantity} == 0">
+                                                               <div th:if="${product.available} != true">
                                                                
 						  <button  onclick="alert('Sản phẩm đã hết!')" disabled> <i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</button>
 							</div>
-													                <div th:if="${product.quantity} != 0">
+													                <div th:if="${product.available} == true">
 												  <button type="submit" onclick="alert('Đã thêm vào giỏ hàng!')"> <i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</button>
 												           
            																		     </div> 
@@ -83,7 +83,7 @@
 
                                                      <div th:if="${product.available} != true">
 							  <div class="product_stock mb-20">
-                                               <p th:inline="text">[[${product.quantity}]] sản phẩm</p>
+                                               <p th:inline="text">0 sản phẩm</p>
                                                 <span> Hết hàng </span>
                                             </div>
 							</div>
