--- a/Normal_DATN/src/main/resources/templates/Admin/page/ContactAd.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/ContactAd.html
@@ -81,7 +81,7 @@
                 <div class="form-group">
                   <label for="exampleInputPassword1">Nội dung</label><br>
                    <i style="color:red" th:text="${content}"></i>
-                  <input type="text" name="content" class="form-control">
+                  <textarea type="text" name="content" class="form-control"></textarea>
                 </div>
                 <div class="box-footer">
                 <i style="color:red" th:text="${tbContact}"></i><br>
