--- a/Normal_DATN/src/main/resources/templates/nguoiDung/contactUs.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/contactUs.html
@@ -54,7 +54,7 @@
 									<textarea th:field="*{Contents}" placeholder="Message *"
 										class="form-control2"></textarea>
 								</div>
-								<i style="color: red" th:text="${tb}"></i>
+								<i style="color: red" th:text="${tb}"></i><br>
 								<button type="submit">Gửi</button>
 							</div>
 							<div class="col-12">
@@ -68,10 +68,7 @@
 			<div class="col-lg-6 col-md-12">
 				<div class="contact_message contact_info">
 					<h3>contact us</h3>
-					<p>Claritas est etiam processus dynamicus, qui sequitur
-						mutationem consuetudium lectorum. Mirum est notare quam littera
-						gothica, quam nunc putamus parum claram anteposuerit litterarum
-						formas human.</p>
+					
 					<ul>
 						<li><i class="fa fa-fax"></i> Địa chỉ : 288 Nguyễn Văn
 							Linh,Phường Hưng Lợi,Quận Ninh Kiều,TP Cần Thơ</li>
