--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -227,8 +227,8 @@
 
                                                                 </div>
                                                             </li>-->
-                                                            <li><a href="#"><span th:text="#{lo.mn.page}"></span></a>
-                                                                <!--  <div class="mega_menu">
+                                                       <!--        <li><a href="#"><span th:text="#{lo.mn.page}"></span></a>
+                                                               <div class="mega_menu">
                                                                     <div class="mega_top fix">
                                                                         <div class="mega_items">
                                                                             <h3><a href="#">Column1</a></h3>
