--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -118,7 +118,7 @@
                                             <div class="header_right_info">
                                                 <div class="search_bar">
                                                     <form action="/shop/find" method="post">
-                                                        <input name="keywords" th:value="${keywords}" placeholder="Tìm kiếm..." type="text">
+                                                        <input name="keywords" th:value="${keywords}" placeholder="Tìm kiếm..." type="text" required>
                                                         <button type="submit"><i class="fa fa-search"></i></button>
                                                     </form>
                                                 </div>
