--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -473,7 +473,7 @@
                         <div class="row">
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="footer_widget">
-                                    <h3>About us</h3>
+                                    <h3>Về chúng tôi</h3>
                                     <p>Chuyên cung cấp sản phẩm đồng hồ chính hãng của các thương hiệu nổi tiếng Nga,
                                          Thụy Sĩ như: Đồng hồ Casio, Rolex,Orient,
                                          CitiZen, các loại đồng hồ bằng vàng khối 100% chính hãng,
@@ -488,36 +488,34 @@
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="footer_widget">
-                                    <h3>My Account</h3>
+                                    <h3>Tài khoản của tôi</h3>
                                     <ul>
-                                        <li><a href="/orderHistory">My Account</a></li>
-                                        <li><a href="/orderHistory">My orders</a></li>
-                                        <li><a href="https://goo.gl/maps/HX6f6TsX37kV1YXR8">My addresses</a></li>
-                                        <li><a href="/login">Login</a></li>
+                                        <li><a href="//editProfile">Tài khoản của tôi</a></li>
+                                        <li><a href="/orderHistory">Đơn hàng của tôi</a></li>
+                                        <li><a href="https://goo.gl/maps/HX6f6TsX37kV1YXR8">Địa chỉ của tôi</a></li>
+                                        <li><a href="/login">Đăng nhập</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="footer_widget">
-                                    <h3>Informations</h3>
+                                    <h3>Thông tin</h3>
                                     <ul>
-                                        <li><a href="#">Specials</a></li>
-                                        <li><a href="#">Our store(s)!</a></li>
-                                        <li><a href="#">My credit slips</a></li>
-                                        <li><a href="#">Terms and conditions</a></li>
-                                        <li><a href="#">About us</a></li>
+                                        <li><a href="#">Đặc Biệt</a></li>
+                                        <li><a href="/shop?subcategory=1">Cửa Hàng Của Chúng Tôi</a></li>
+                                        <li><a href="#">Các Điều Khoản Và Điều Kiện</a></li>
+                                        <li><a href="#">Về Chúng Tôi</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="footer_widget">
-                                    <h3>extras</h3>
+                                    <h3> TÍNH NĂNG BỔ SUNG</h3>
                                     <ul>
-                                        <li><a href="#"> Brands</a></li>
-                                        <li><a href="#"> Gift Vouchers </a></li>
-                                        <li><a href="#"> Affiliates </a></li>
-                                        <li><a href="#"> Specials </a></li>
-                                        <li><a href="#"> Privacy policy </a></li>
+                                        <li><a href="#"> Nhãn Hiệu</a></li>
+                                        <li><a href="#"> Chi Nhánh </a></li>
+                                        <li><a href="#"> Đặc Biệt </a></li>
+                                        <li><a href="#"> Chính Sách Bảo Mật </a></li>                                 
                                     </ul>
                                 </div>
                             </div>
@@ -529,12 +527,8 @@
                         <div class="row align-items-center">
                             <div class="col-lg-6 col-md-6">
                                 <div class="copyright_area">
-                                    <ul>
-                                        <li><a href="#"> about us </a></li>
-                                        <li><a href="#">  Customer Service  </a></li>
-                                        <li><a href="#">  Privacy Policy  </a></li>
-                                    </ul>
-                                    <p>Copyright &copy; 2018 <a href="#">Pos Coron</a>. All rights reserved. </p>
+                                 
+                                    <p>Copyright &copy; 2022 <a href="#">HoLy Watch</a>. All rights reserved. </p>
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
